--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reown/appkit-adapter-wagmi": "1.6.9",
     "@tanstack/react-query": "^5.59.20",
     "chart.js": "^4.4.8",
+    "ethers": "^5.7.2",
+    "@ethersproject/units": "^5.7.0",
     "next": "15.1.6",
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
