--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
   "dependencies": {
     "@reown/appkit": "1.6.9",
     "@reown/appkit-adapter-wagmi": "1.6.9",
-    "@tanstack/react-query": "^5.59.20",
-    "chart.js": "^4.4.8",
-    "ethers": "^5.7.2",
-    "@ethersproject/units": "^5.7.0",
+    "@tanstack/react-query": "5.59.20",
+    "chart.js": "4.4.8",
+    "ethers": "6.13.5",          
     "next": "15.1.6",
-    "react": "19.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.0.0",
-    "viem": "^2.21.44",
-    "wagmi": "^2.12.31"
+    "react": "18.3.1",
+    "react-chartjs-2": "5.3.0",
+    "react-dom": "18.3.1",
+    "viem": "2.23.10",
+    "wagmi": "2.14.11"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "22.13.1",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "eslint": "9.20.0",
     "eslint-config-next": "15.1.6",
-    "typescript": "^5"
+    "typescript": "5.7.3"
   }
 }
