--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/units": "5.7.0", 
     "@reown/appkit": "1.6.9",
     "@reown/appkit-adapter-wagmi": "1.6.9",
     "@tanstack/react-query": "5.59.20",
     "chart.js": "4.4.8",
-    "ethers": "6.13.5",          
+    "ethers": "6.13.5",
     "next": "15.1.6",
     "react": "18.3.1",
     "react-chartjs-2": "5.3.0",
