--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reown/appkit": "1.6.9",
     "@reown/appkit-adapter-wagmi": "1.6.9",
     "@tanstack/react-query": "^5.59.20",
+    "ethers": "6.13.5",          
+    "@ethersproject/units": "5.7.0", 
     "chart.js": "^4.4.8",
     "next": "15.1.6",
     "react": "19.0.0",
